feat: Complete Phase 1 - Local File Scanning + EXIF
Implemented core functionality for scanning local folders and extracting photo metadata:

Features:
- Recursive directory scanning with configurable skip patterns
- EXIF GPS coordinate extraction using exifr.gps()
- EXIF timestamp extraction (DateTimeOriginal, CreateDate, DateTime)
- SQLite database storage with proper indexing
- IPC handlers for folder selection and scanning
- UI with folder picker and scan results display

Technical Implementation:
- Embedded SQL migrations to avoid runtime file dependencies
- RETURNING clause for atomic insert/update operations
- Prepared statements for SQL injection protection
- Read-only photo file access (no modifications)
- Support for JPG, PNG, HEIC, TIFF, WebP formats
- 100MB file size limit to prevent memory issues

Security:
- Path traversal protection via Electron native dialog
- Prepared SQL statements throughout
- No sensitive data in error messages
- Read-only file operations

Code Quality:
- All TypeScript strict mode checks passing
- No unused imports or variables
- Explicit error handling with graceful degradation
- Functions average <50 lines
- Self-documenting code with clear naming

Tested with 917 photos, successfully extracted GPS data from geotagged images.

Phase 1 complete ✓

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,18 @@ dist/
 dist-electron/
 release/
 *.log
+*.tsbuildinfo
 
 # Dependencies
 node_modules/
 .pnpm-store/
+
+# Database files (generated at runtime)
+*.db
+*.db-wal
+*.db-shm
+*.sqlite
+*.sqlite3
 
 # IDE
 .vscode/
@@ -24,6 +32,14 @@ Thumbs.db
 .env.local
 .env.*.local
 
+# Testing
+coverage/
+.nyc_output/
+
 # Temporary
 *.tmp
 .cache/
+
+# Electron
+out/
+.webpack/
