--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@placemark/core": "workspace:*"
+    "@placemark/core": "workspace:*",
+    "better-sqlite3": "^12.6.2",
+    "exifr": "^7.1.3"
   },
   "devDependencies": {
+    "@electron/rebuild": "^4.0.2",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "electron": "^28.1.4",
-    "electron-builder": "^24.9.1",
+    "electron-builder": "^26.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
